2005-12-01  Anders Carlsson  <andersca@mac.com>

        Reviewed by Darin.

        - Fixes <http://bugzilla.opendarwin.org/show_bug.cgi?id=3382>

        Patch by Mark Rowe.

        * kjs/nodes2string.cpp:
        (ForInNode::streamTo):
        Add lexpr if there's no varDecl.

2005-12-01  Maciej Stachowiak  <mjs@apple.com>

        Rubber stamped by Eric.

	- renamed SharedPtr to RefPtr via script

        * JavaScriptCore.xcodeproj/project.pbxproj:
        * kjs/function.cpp:
        (KJS::GlobalFuncImp::callAsFunction):
        * kjs/function.h:
        * kjs/function_object.cpp:
        (FunctionObjectImp::construct):
        * kjs/internal.cpp:
        (KJS::Parser::parse):
        (KJS::InterpreterImp::checkSyntax):
        (KJS::InterpreterImp::evaluate):
        * kjs/internal.h:
        * kjs/nodes.h:
        * kjs/nodes2string.cpp:
        (KJS::SourceStream::operator<<):
        * kjs/protect.h:
        * kxmlcore/RefPtr.h: Added.
        (KXMLCore::RefPtr::RefPtr):
        (KXMLCore::RefPtr::~RefPtr):
        (KXMLCore::RefPtr::isNull):
        (KXMLCore::RefPtr::notNull):
        (KXMLCore::RefPtr::reset):
        (KXMLCore::RefPtr::get):
        (KXMLCore::RefPtr::operator*):
        (KXMLCore::RefPtr::operator->):
        (KXMLCore::RefPtr::operator!):
        (KXMLCore::RefPtr::operator UnspecifiedBoolType):
        (KXMLCore::::operator):
        (KXMLCore::operator==):
        (KXMLCore::operator!=):
        (KXMLCore::static_pointer_cast):
        (KXMLCore::const_pointer_cast):
        * kxmlcore/SharedPtr.h: Removed.

2005-11-30  Maciej Stachowiak  <mjs@apple.com>

	Reviewed by Dave Hyatt.

        - change idiom used for implicit bool conversion of smart pointers, because the old one gives weird error messages sometimes

        * kjs/protect.h:
        (KJS::ProtectedPtr::operator UnspecifiedBoolType):
        * kxmlcore/SharedPtr.h:
        (KXMLCore::SharedPtr::operator UnspecifiedBoolType):
